[024-0.1.2]: Added @media queries to subStyle.css to start addressing modals. Re-added the margin for intro grid into the correct @media query to hopefully solve the intro 'card' not aligning properly in landscape mode.

--- a/stylesheets/4_subStyle.css
+++ b/stylesheets/4_subStyle.css
@@ -193,3 +193,53 @@ It also controls the modals styling. */
 @media (min-width: 1200px) {  }
 
 /* ========================= */
+
+
+/* ===== Mobile Phones ===== */
+
+/* iPhone X (retina) Landscape */
+@media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 812px)
+and (-webkit-device-pixel-ratio : 3)
+and (orientation: landscape) { 
+    .intro-grid{
+        margin-top: 25%;
+    }
+}
+
+/* ======================== */
+
+
+
+/* ===== Tablets ===== */
+
+/* iPad Mini + iPad (non retina) Portrait */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait)
+and (-webkit-min-device-pixel-ratio: 1)  { /* STYLES GO HERE */ }
+
+/* iPad Mini + iPad (non retina) Landscape */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape)
+and (-webkit-min-device-pixel-ratio: 1)  { /* STYLES GO HERE */}
+
+/* iPad (retina) Portrait */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : portrait)
+and (-webkit-min-device-pixel-ratio: 2) { /* STYLES GO HERE */ }
+
+/* iPad (retina) Landscape */
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) 
+and (orientation : landscape)
+and (-webkit-min-device-pixel-ratio: 2) { /* STYLES GO HERE */}
+
+/* ========================= */
